# py_power_diagram

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  setup.py
examples/: fast_marching.py  ot_bimodal_crowd.py  ot_bimodal_crowd_rescaled.py  ot_converging_corridor.py  ot_crowd_with_obstacle.py  ot_diffusion.py
lib/: __init__.py  py_power_diagram_2d_double.cpp  py_power_diagram_cpp_module.py  pybind.h
lib/grid_types/: ZGrid.py
py_power_diagram/: OptimalTransportSolver.py  __init__.py  pybind.h
py_power_diagram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py_power_diagram/cpp/: py_power_diagram_2d_double.cpp  py_power_diagram_cpp_module.py  pybind.h
py_power_diagram/domain_types/: ConvexPolyhedraAssembly.py
py_power_diagram/grid_types/: ZGrid.py
py_power_diagram/internals/: pybind.h
scripts/: run_tests  setup.py
test/: _import_py_power_diagram.py  test_get_measures.py
tests/: py_power_diagram_test_context.py  test_der_integrate.py  test_get_measures.py  test_integrate.py  test_optimal_transport.py
